Disable Samsung's exceedingly obnoxious anti-root measures
...and other anal-retentive anti-features

--- a/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
+++ b/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.78 Kernel Configuration
+# Linux/arm64 4.14.146 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -242,7 +242,7 @@ CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SYSTEM_DATA_VERIFICATION=y
+# CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_DEFERRED_INITCALLS=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
@@ -329,15 +329,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
+# CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_COMPRESS is not set
 # CONFIG_TRIM_UNUSED_KSYMS is not set
 CONFIG_MODULES_TREE_LOOKUP=y
@@ -622,26 +614,17 @@ CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
-CONFIG_UH=y
-CONFIG_UH_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_UH_LKMAUTH=y
-CONFIG_UH_LKM_BLOCK=y
+# CONFIG_UH is not set
+# CONFIG_UH_RKP is not set
+# CONFIG_UH_LKMAUTH is not set
+# CONFIG_UH_LKM_BLOCK is not set
 
 #
 # Control Flow Protection
 #
-CONFIG_RKP_CFP=y
-CONFIG_RKP_CFP_JOPP=y
-CONFIG_RKP_CFP_JOPP_MAGIC=0x00be7bad
-CONFIG_RKP_CFP_ROPP=y
-CONFIG_RKP_CFP_ROPP_SYSREGKEY=y
-# CONFIG_RKP_CFP_ROPP_RANDKEY is not set
-# CONFIG_RKP_CFP_ROPP_FIXKEY is not set
-# CONFIG_RKP_CFP_ROPP_ZEROKEY is not set
-# CONFIG_RKP_CFP_TEST is not set
+# CONFIG_RKP_CFP is not set
+# CONFIG_RKP_CFP_JOPP is not set
+# CONFIG_RKP_CFP_ROPP is not set
 
 #
 # ARMv8.1 architectural features
@@ -705,7 +688,7 @@ CONFIG_MACH_BEYOND2QLTE_CHNZH=y
 # CONFIG_SEC_WINNERLTE_PROJECT is not set
 # CONFIG_SEC_BOLTQ5G_PROJECT is not set
 # CONFIG_SEC_BEYONDXQ_PROJECT is not set
-CONFIG_LOD_SEC=y
+# CONFIG_LOD_SEC is not set
 # CONFIG_SEC_5GMODEL is not set
 
 #
@@ -1257,7 +1240,7 @@ CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
 # CONFIG_NET_NCSI is not set
 # CONFIG_RMNET_DATA is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -2333,6 +2316,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
+# CONFIG_LDISC_AUTOLOAD is not set
 # CONFIG_DEVMEM is not set
 
 #
@@ -2376,7 +2360,6 @@ CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_MSM is not set
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 CONFIG_HW_RANDOM_CAVIUM=y
-# CONFIG_R3964 is not set
 # CONFIG_APPLICOM is not set
 
 #
@@ -4701,12 +4684,11 @@ CONFIG_SEC_ABC_HUB_COND=y
 #
 # Samsung ABC Hub Booting Time Check Options
 #
-CONFIG_SEC_ABC_HUB_BOOTC=y
+# CONFIG_SEC_ABC_HUB_BOOTC is not set
 
 #
 # Samsung ABC Hub Booting Time Check eng mode Options
 #
-# CONFIG_SEC_ABC_HUB_BOOTC_ENG is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -5657,9 +5639,6 @@ CONFIG_TRUSTONIC_TEE_LPAE=y
 CONFIG_SENSORS_FINGERPRINT=y
 # CONFIG_SENSORS_ET5XX is not set
 CONFIG_SENSORS_QBT2000=y
-CONFIG_FIVE_TEE_DRIVER=y
-# CONFIG_TEE_DRIVER_DEBUG is not set
-CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP=y
 CONFIG_GATOR=m
 # CONFIG_GATOR_DO_NOT_ONLINE_CORES_AT_STARTUP is not set
 
@@ -6118,10 +6097,7 @@ CONFIG_SEC_PM_DEBUG=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
 # CONFIG_KERNEL_MODE_NEON_DEBUG is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINKS_AND_SINKS=y
@@ -6199,18 +6175,10 @@ CONFIG_INTEGRITY_TRUSTED_KEYRING=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_FIVE=y
-# CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
-# CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_TRUSTED_KEYRING=y
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_FIVE is not set
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
-CONFIG_SECURITY_DSMS=y
-CONFIG_PROCA=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
@@ -6377,13 +6345,10 @@ CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_PKCS7_MESSAGE_PARSER=y
-# CONFIG_PKCS7_TEST_KEY is not set
-# CONFIG_SIGNED_PE_FILE_VERIFICATION is not set
 
 #
 # Certificates for signature checking
 #
-CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
