defconfig: disable platform watchdog
If running a custom kernel, this doesn't really do anything anyway

--- a/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
+++ b/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
@@ -5494,7 +5494,7 @@ CONFIG_SEC_SSR_DEBUG_LEVEL_CHK=y
 CONFIG_USER_RESET_DEBUG=y
 # CONFIG_USER_RESET_DEBUG_TEST is not set
 CONFIG_SEC_PERIPHERAL_SECURE_CHK=y
-CONFIG_SEC_DEBUG_PWDT=y
+# CONFIG_SEC_DEBUG_PWDT is not set
 # CONFIG_SEC_QUEST is not set
 # CONFIG_SEC_QUEST_UEFI is not set
 # CONFIG_SEC_SKP is not set
