--- a/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
+++ b/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
@@ -333,6 +333,7 @@ CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_COMPRESS is not set
 # CONFIG_TRIM_UNUSED_KSYMS is not set
 CONFIG_MODULES_TREE_LOOKUP=y
+CONFIG_DEBUG_RENAME_SKIP_INITRAMFS_BOOTPARAM=y
 CONFIG_BLOCK=y
 CONFIG_BLK_SCSI_REQUEST=y
 CONFIG_BLK_DEV_BSG=y
@@ -649,6 +650,9 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 # Boot options
 #
 CONFIG_CMDLINE="loop.max_part=7"
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
