--- a/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
+++ b/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
@@ -650,7 +650,7 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 # Boot options
 #
 CONFIG_CMDLINE="loop.max_part=7"
-CONFIG_CMDLINE_FROM_BOOTLOADER=y
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
