--- a/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
+++ b/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
@@ -6050,6 +6050,7 @@ CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
