--- a/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
+++ b/arch/arm64/configs/beyond2qlte_chn_hk_q12_defconfig
@@ -2122,7 +2122,7 @@ CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_KEYRESET is not set
-CONFIG_SEC_DEBUG_TSP_LOG=y
+# CONFIG_SEC_DEBUG_TSP_LOG is not set
 CONFIG_INPUT_TOUCHSCREEN_TCLMV2=y
 CONFIG_INPUT_SEC_SECURE_TOUCH=y
 # CONFIG_INPUT_KEYCOMBO is not set
